feat: :art: fixing cgi variables

--- a/WebServer/CgiHandler/README
+++ b/WebServer/CgiHandler/README
@@ -1,4 +1,12 @@
+//Basic idea of cgi: running external script
+// External script is specified in the config file: the extention and the name
+// if HTTP request makes a request with the relative cgi path, the cgi gets executed
+
 // If cgi is specified in a location block, the path specified is handled as cgi input.
 // If uri from the http request is the same as a cgi path specified in the config files, cgi script will be exectuted
 // SO: if match request & cgi path: execute cgi class
 // Should work with get and post
+
+// works for port 8081
+// works for .php 
+// make sure the php has x rights
