--- a/WebServer/CgiHandler/README
+++ b/WebServer/CgiHandler/README
@@ -5,7 +5,7 @@
 // If cgi is specified in a location block, the path specified is handled as cgi input.
 // If uri from the http request is the same as a cgi path specified in the config files, cgi script will be exectuted
 // SO: if match request & cgi path: execute cgi class
-// Should work with GET and POST
+// Should work with GET (coolCgi) and POST(file upload)
 
 // works for port 8081
 // works for .php 
@@ -13,3 +13,4 @@
 // Set runLoc to the path of the .php runner (command: which php)
 
 // Execution of cgi: create a child process (with fork), then replace the child process wiht the cgi script (with execve)
+// pipes: responsible for sending data to the CGI script and receiving data from it: for file upload
